--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header class="cabeçalho">
-        <img class="cabeçalho-imagem" src="aviao-14-bis.jpg" alt="logo do avião">
+        <img class="cabeçalho-imagem" src="14-bis.webp" alt="logo do avião">
         <ul class="cabeçalho-lista">
             <li class="cabeçalho-lista-item">Colégio Estadual Santos Dumont</li>
         </ul>
